--- a/contact-sales.html
+++ b/contact-sales.html
@@ -1,13 +1,5 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
- <summary>{{ page.description }}</summary>
- <section class="bcls-section">
-   <h2 id="contact_sales">New to Brightcove?</h2>
-   <p>If you are new to Brightcove and interested in purchasing Brightcove products or services, you can contact our Sales organization by going to <a href="https://www.brightcove.com/en/contact-sales">this page</a> and filling out the form, or by calling one of the phone numbers listed at the bottom of that page.</p>
- </section>
- <section class="bcls-section">
-   <h2 id="account_manager">Already a customer?</h2>
-   <p>If you are already a Brightcove customer and interested in purchasing add-ons, additional products or services, contact you Account Manager. If you are not sure who your Account Manager is, <a href="/support/opening-case-with-brightcove-support.html">open a support case</a>, and someone in our Support organization will give you the information.</p>
- </section>
-</article>
-
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+   <h2 id="contact_sales">Brightcove を初めてお使いになる方は、</h2>
+   <p>ブライトコーブを初めて使用し、ブライトコーブの製品またはサービスの購入に関心がある場合は、次の URL から営業部門に連絡できます。<a href="https://www.brightcove.com/en/contact-sales">このページ</a>フォームに記入するか、そのページの下部に記載されている電話番号のいずれかに電話してください。</p>  </section><section class="bcls-section">
+   <h2 id="account_manager">すでにお客様？</h2>
+   <p>すでに Brightcove のお客様で、アドオン、その他の製品、またはサービスの購入をご希望の場合は、アカウントマネージャーにお問い合わせください。アカウント マネージャーが不明な場合は、<a href="/support/opening-case-with-brightcove-support.html">サポートケースを開く</a>、サポート組織の担当者が情報を提供します。</p>   </section></article>
