--- a/opening-case-brightcove-support.html
+++ b/opening-case-brightcove-support.html
@@ -1,111 +1,84 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
-  <summary>{{ page.description }}</summary>
-  <section class="bcls-section">
-    <p>Brightcove offers a variety of support programs to meet the needs of our customers. For information on these programs, check the <a href="https://www.brightcove.com/en/services/customer-support">Brightcove Support section</a> of our website.</p>
-    <p>One support option is the Support Portal that can be used to open a case with Brightcove Support</p>
-  </section>
-  <section class="bcls-section">
-    <h2 id="create-account">Creating a new support account</h2>
-    <p>Before you can create cases using the Support Portal you have to create an account. To create a new account, follow these steps:</p>
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+    <p>Brightcoveは、お客様のニーズを満たすさまざまなサポートプログラムを提供しています。これらのプログラムの詳細については、<a href="https://www.brightcove.com/en/services/customer-support">ブライトコーブ サポート セクション</a>私たちのウェブサイトの。</p>
+    <p>サポートオプションの 1 つは、サポートポータルで Brightcove サポートでケースをオープンするために使用できます</p>  </section><section class="bcls-section">
+    <h2 id="create-account">新しいサポートアカウントを作成する</h2>
+    <p>サポートポータルを使用してケースを作成する前に、アカウントを作成する必要があります。新しいアカウントを作成するには、以下の手順を実行します。</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Access the Support Portal using one of these methods:
+      <li>次のいずれかの方法を使用して、サポートポータルにアクセスします。
         <ul>
-          <li>In the application header, click <strong>SUPPORT &gt; Contact Support</strong></li>
-          <li>Go to <a href="https://supportportal.brightcove.com/">https://supportportal.brightcove.com</a></li>
-        </ul>
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-login.png" /></figure>
+          <li>アプリケーション ヘッダーで、<strong>サポート &gt; サポートへのお問い合わせ</strong></li>
+          <li>に行く<a href="https://supportportal.brightcove.com/">https://supportportal.brightcove.com</a></li>
+        </ul> <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-login.png" /></figure>
       </li>
-      <li>Click <strong>Sign Up</strong>.</li>
-      <li>Enter your <strong>First Name</strong>, <strong>Last Name</strong>,<strong> Email</strong> and <strong>Password</strong>. Click <strong>Submit</strong>.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-account.png" /></figure>
+      <li>クリック<strong>サインアップ</strong>.</li>
+      <li>あなたの〜を入力してください<strong>ファーストネーム</strong>、<strong>苗字</strong>、<strong> Eメール</strong>と<strong>パスワード</strong>.クリック<strong>送信</strong>. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-account.png" /></figure>
       </li>
-      <li>Confirm that you are redirected to the Brightcove Support Portal home page.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-home.png" /></figure>
+      <li>Brightcove サポートポータルのホームページにリダイレクトされていることを確認します。 <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-home.png" /></figure>
       </li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="open-case">Opening a support case</h2>
-    <p>To open a case with Brightcove Support using the Support Portal, follow these steps:</p>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="open-case">サポートケースを開く</h2>
+    <p>サポートポータルを使用して Brightcove サポートでケースをオープンするには、次の手順に従います。</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Log in to the Brightcove Support Portal at <a href="https://supportportal.brightcove.com">https://supportportal.brightcove.com</a>.</li>
-      <li>Click <strong>SUBMIT A CASE</strong> in the page header.</li>
-      <li>Enter case information:
+      <li>ブライトコーブ サポート ポータルにログインします。<a href="https://supportportal.brightcove.com"> https://supportportal.brightcove.com</a> .</li>
+      <li>クリック<strong>ケースを提出する</strong>ページヘッダーに。</li>
+      <li>ケース情報を入力してください:
         <ul>
-          <li><strong>Subject</strong> - Title of the case</li>
-          <li><strong>Description</strong> - Description of the issue, question or problem</li>
-          <li><strong>Priority</strong>
+          <li><strong>主題</strong>- ケースのタイトル</li>
+          <li><strong>説明</strong>- 問題、質問または問題の説明</li>
+          <li><strong>優先順位</strong>
             <ul>
-              <li><strong>P1</strong> - Critical - Loss of a Brightcove Service or critical loss of significant publishing availability to a live production player</li>
-              <li><strong>P2</strong> - Important - Brightcove Service is operational, but there are blocking issues regarding expected publishing capabilities specific to a live production player (i.e. relating to uploads, console activity, specific players).</li>
-              <li><strong>P3</strong> - Normal - Requests which are not defined as Critical or Important (including requests for account/user modifications)</li>
+              <li><strong>P1</strong> - 重大 - ブライトコーブ サービスの喪失、またはライブ プロダクション プレーヤーへの重要なパブリッシング アベイラビリティの重大な喪失</li>
+              <li><strong>P2</strong> - 重要 - ブライトコーブ サービスは動作していますが、ライブ プロダクション プレーヤーに固有の期待されるパブリッシング機能に関するブロックの問題があります (つまり、アップロード、コンソール アクティビティ、特定のプレーヤーに関連する)。</li>
+              <li><strong>P3</strong> - 通常 - クリティカルまたは重要として定義されていないリクエスト (アカウント/ユーザーの変更のリクエストを含む)</li>
             </ul>
           </li>
-          <li><strong>Product</strong> - The Brightcove application to which the support request relates to</li>
-          <li><strong>Brightcove Account</strong> - Account name where the support request relates to</li>
-          <li><strong>URL</strong> - Page URL where the issue can be observed (if available)</li>
-          <li><strong>Additional CC</strong> - On top of the default CC list, you can decide to add additional email addresses of collaborators that should be informed of the case progress</li>
-        </ul>
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-case.png" /></figure>
+          <li><strong>製品</strong>- サポート リクエストに関連する Brightcove アプリケーション</li>
+          <li><strong>ブライトコーブ アカウント</strong>- サポート リクエストに関連するアカウント名</li>
+          <li><strong>URL</strong> - 問題が確認できるページの URL (利用可能な場合)</li>
+          <li><strong>追加CC</strong> - デフォルトの CC リストに加えて、ケースの進行状況を通知する協力者の電子メール アドレスを追加することを決定できます</li>
+        </ul> <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-case.png" /></figure>
       </li>
-      <li>Click <strong>Submit</strong>. The case details will be displayed.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-details.png" /></figure>
+      <li>クリック<strong>送信</strong>.ケースの詳細が表示されます。 <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-details.png" /></figure>
       </li>
-      <li>Click on the <strong>Write a new comment...</strong> link to add additional comments or to upload a screen shot. Detailed steps to reproduce the issue and screen shots of the behavior/issue are always helpful to Brightcove Support and can speed up the time needed to resolve your case.</li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="view-cases">Viewing your support cases</h2>
-		<aside class="bcls-aside bcls-aside--information">Note: if your Support Portal profile is <strong>admin</strong>, you will see all cases for the account (you will not get notifications when other account users create cases). If you are a <strong>standard</strong> or self-registered user, you will only see the cases you have opened.</aside
-    <p>All support cases can easily be viewed in the Support Portal. The <strong>CASE STATUS</strong> will be one of:</p>
+      <li>クリックしてください<strong>新しいコメントを書く...</strong>リンクをクリックして、追加のコメントを追加するか、スクリーン ショットをアップロードします。問題を再現するための詳細な手順と動作/問題のスクリーンショットは、常にBrightcoveサポートに役立ち、ケースの解決に要する時間を短縮できます。</li>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="view-cases">サポートケースの表示</h2> <aside class="bcls-aside bcls-aside--information">注: サポート ポータルのプロファイルが<strong>管理者</strong>、アカウントのすべてのケースが表示されます (他のアカウント ユーザーがケースを作成しても、通知は届きません)。あなたが<strong>標準</strong>または自己登録ユーザーの場合、開いたケースのみが表示されます。</aside     <p>すべてのサポート ケースは、サポート ポータルで簡単に表示できます。の<strong>ケースステータス</strong>次のいずれかになります。</p>
     <ul>
-      <li><strong>New</strong> - Case was just created and is awaiting Brightcove review</li>
-      <li><strong>Open</strong> - Case is in progress</li>
-      <li><strong>Awaiting your response</strong> - Brightcove Support requires additional information or a solution has been provided and Brightcove is waiting for a response</li>
-      <li><strong>Closed</strong> - Case has been resolved</li>
-      <li><strong>Closed Awaiting</strong> - Case was closed due to no response from publisher; case will be reopened if publisher contacts Brightcove</li>
-    </ul>
-    		<aside class="bcls-aside bcls-aside--information">Note that cases that have been deleted by Support as duplicates will not appear in the Support Portal.</aside>
-    <p>To view your cases with Brightcove Support, follow these steps:</p>
+      <li><strong>新しい</strong>- ケースは作成されたばかりで、ブライトコーブの審査待ちです</li>
+      <li><strong>開ける</strong>- ケースが進行中です</li>
+      <li><strong>あなたの応答を待っています</strong>- ブライトコーブ サポートが追加情報を要求しているか、解決策が提供されており、ブライトコーブが応答を待っています</li>
+      <li><strong>閉まっている</strong>- ケースが解決されました</li>
+      <li><strong>閉店待ち</strong>- 出版社からの応答がないため、ケースはクローズされました。パブリッシャーがブライトコーブに連絡した場合、ケースは再開されます</li>
+    </ul> <aside class="bcls-aside bcls-aside--information">サポートによって重複として削除されたケースは、サポートポータルに表示されないことに注意してください。</aside>
+    <p>Brightcoveサポートでケースを表示するには、次の手順に従います。</p>
 
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Log in to the Brightcove Support Portal at <a href="https://supportportal.brightcove.com">https://supportportal.brightcove.com</a>.</li>
-      <li>Click <strong>SUPPORT CASES</strong> in the page header. A list of <strong>Open Cases</strong> will display.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-listing.png" /></figure>
+      <li>ブライトコーブ サポート ポータルにログインします。<a href="https://supportportal.brightcove.com"> https://supportportal.brightcove.com</a> .</li>
+      <li>クリック<strong>サポートケース</strong>ページヘッダーに。のリスト<strong>オープンケース</strong>が表示されます。 <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-listing.png" /></figure>
       </li>
-      <li>Click the <strong>Case History</strong> link to view a list of closed cases.</li>
-      <li>Click on a <strong>Case Number</strong> to view the case details including comments from Brightcove Support.</li>
+      <li>クリック<strong>病歴</strong>リンクをクリックして、クローズされたケースのリストを表示します。</li>
+      <li>をクリックします。<strong>ケース番号</strong>ブライトコーブ サポートからのコメントを含むケースの詳細を表示します。</li>
     </ol>
-    <p>Clicking on a column header will sort the list by that column.</p>
-  </section>
-  <section class="bcls-section">
-    <h2 id="updating">Updating a support case</h2>
-    <p>Once the case has been created three are a few actions you can take to keep your cases up to date: </p>
+    <p>列見出しをクリックすると、その列でリストがソートされます。</p>  </section><section class="bcls-section">
+    <h2 id="updating">サポートケースを更新する</h2>
+    <p>ケースの作成後、ケースを最新の状態に保つために実行できるアクションを 3 つ示します。 </p>
     <ul>
-      <li>Add new comments to communicate with our support team</li>
-      <li>Upload or delete attachments with more information to help us identify the issue as fast as possible</li>
-      <li>Update the case priority in the event that you need more attention on a case or it becomes more urgent than initially expected</li>
-      <li>Update the CC list to add more watchers to the case</li>
-      <li>Request  case closure after your issue has been resolved</li>
-    </ul>
-  </section>
-  <section class="bcls-section">
-    <h2 id="update-cc-list">Updating your default CC list</h2>
-    <p>The default CC list is a per account email list that is notified of all of the account’s case activity. To update the list, follow these steps:</p>
+      <li>新しいコメントを追加して、サポートチームと連絡を取り合う</li>
+      <li>できるだけ早く問題を特定できるように、詳細情報を含む添付ファイルをアップロードまたは削除してください</li>
+      <li>ケースについてさらに注意が必要な場合や、当初の予想よりも緊急になった場合に、ケースの優先順位を更新します。</li>
+      <li>CCリストを更新して、ケースにウォッチャーを追加します</li>
+      <li>問題が解決した後、ケース終了をリクエストする</li>
+    </ul>  </section><section class="bcls-section">
+    <h2 id="update-cc-list">デフォルトの CC リストの更新</h2>
+    <p>デフォルトのCCリストは、アカウントごとのEメールリストで、アカウントのケースアクティビティすべてについて通知されます。リストを更新するには、次の手順を実行します。</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Go to the top right corner and click on the user icon.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-account.png" /></figure>
+      <li>右上隅に移動し、ユーザーアイコンをクリックします。 <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-account.png" /></figure>
       </li>
-      <li>Click <strong>My Account</strong>.</li>
-      <li>Enter the new email addresses or remove existing addresses in the <strong>Account default CC list</strong>.</li>
-      <li>Click <strong>Update default CC list</strong> to save the changes.</li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="view-system-status">Viewing the Brightcove System Status page</h2>
-    <p>Brightcove continuously monitors the status of all Brightcove Services. If there are any interruptions in service, a note will be posted on the System Status Page. All scheduled maintenance notices will also be posted.</p>
-    <p>To access the System Status page, login to the Support Portal and click SYSTEM STATUS in the page header or go to <a href="https://status.brightcove.com/">status.brightcove.com</a>.</p>
-    <p>To learn more about the System Status page, see <a href="/support/viewing-brightcove-system-status-page.html">Viewing the Brightcove System Status Page</a>.</p>
-  </section>
-</article>
+      <li>クリック<strong>マイアカウント</strong>.</li>
+      <li>新しい電子メール アドレスを入力するか、既存のアドレスを削除します<strong>アカウントのデフォルト CC リスト</strong>.</li>
+      <li>クリック<strong>デフォルトの CC リストを更新する</strong>変更を保存します。</li>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="view-system-status">Brightcoveのシステムステータスページの表示</h2>
+    <p>Brightcoveは、すべての Brightcove サービスのステータスを継続的に監視します。サービスに何らかの中断があると、システムステータスページに表示されます。予定されているメンテナンス通知もすべて掲載されます。</p>
+    <p>システム ステータス ページにアクセスするには、サポート ポータルにログインし、ページ ヘッダーの [システム ステータス] をクリックするか、<a href="https://status.brightcove.com/"> status.brightcove.com</a> .</p>
+    <p>[システム ステータス] ページの詳細については、次を参照してください。<a href="/support/viewing-brightcove-system-status-page.html"> Brightcove システム ステータス ページの表示</a>.</p>   </section></article>
